--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
     "psutil>=5.9.0",
     "requests>=2.31.0",
     "python-dotenv>=1.0.0",
+    "groq>=0.4.0",
+    "google-generativeai>=0.3.0",
 ]
 
 [project.optional-dependencies]
