--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,9 @@
 # checkDK Environment Variables
 # Copy this file to .env and add your actual API keys
 
-# Groq API Key (Recommended - Fast and Free)
+# Groq API Key (Fast and Free)
 # Get yours at: https://console.groq.com
 GROQ_API_KEY=your_groq_api_key_here
-
-# Google Gemini API Key (Alternative/Fallback)
-# Get yours at: https://ai.google.dev
-GEMINI_API_KEY=your_gemini_api_key_here
 
 # AI Configuration
 CHECKDK_AI_ENABLED=true
